test/test_11813225_3.out
Error type 9 at Line 8: a function’s arguments mismatch the declared parameters
