test/test_11813225_3.spl
int x(int a)
{
  return a;
}

int testtt()
{
  return x(5.0);
}